--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,4 +1,4 @@
-name: hello world
+name: Run tests
 on:
   push:
     branches:
@@ -7,8 +7,16 @@ on:
     branches:
       - master
 jobs:
-  hello:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Hello world
-        run: echo "Hello world"
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.x'
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Tests
+        run: npm test
