--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -19,4 +19,4 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests
-        run: npm test
+        run: npm test:e2e
