--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -9,7 +9,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
      env:  
       DB_HOST: database-1.crmqwukkkrmp.us-east-1.rds.amazonaws.com
       DB_USER: postgres
@@ -28,4 +27,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests
-        run: npm run test:e2e
+          env:
+            DB_DATABASE: ${{ secrets.DB_DATABASE }}
+            DB_HOST: ${{ secrets.DB_HOST }}
+            DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+            DB_PORT: ${{ secrets.DB_PORT }}
+            DB_TYPE: ${{ secrets.DB_TYPE }}
+            DB_USERNAME: ${{ secrets.DB_USERNAME}}
+          run: npm run test:e2e
