--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,3 +1,32 @@
+# name: Run tests
+# on:
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+#     branches:
+#       - master
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: Set up Node
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '18.x'
+#       - name: Install Dependencies
+#         run: npm ci
+#       - name: Run Tests
+#           env:
+#             DB_DATABASE: ${{ secrets.DB_DATABASE }}
+#             DB_HOST: ${{ secrets.DB_HOST }}
+#             DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#             DB_PORT: ${{ secrets.DB_PORT }}
+#             DB_TYPE: ${{ secrets.DB_TYPE }}
+#             DB_USERNAME: ${{ secrets.DB_USERNAME}}
+#           run: npm run test:e2e
 name: Run tests
 on:
   push:
