--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,8 +11,6 @@ phases:
   pre_build:
     commands:
       - echo Installing source yarn dependencies...
-      - rm -rf node_modules
-      - npm install
   build:
     commands:
       - echo Build started on `date`
@@ -22,4 +20,4 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-    - '**/*'
+    - 'dist/**/*'
