--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Installing source yarn dependencies...
-
+      - npm install
   build:
     commands:
       - echo Build started on `date`
