--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - npm run build
+      # - npm run build
   post_build:
     commands:
       - echo Build completed on `date`
