--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,13 +11,14 @@ phases:
   pre_build:
     commands:
       - echo Installing source yarn dependencies...
-      # - npm install
+      - npm install
   build:
     commands:
       - echo Build started on `date`
+      - npm run build
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
   files:
-    - '**/*'
+    - 'dist/**/*'
