--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,11 +11,11 @@ phases:
   pre_build:
     commands:
       - echo Installing source yarn dependencies...
-      # - npm install
+      - npm install
   build:
     commands:
       - echo Build started on `date`
-      # - npm run build
+      - npm run build
   post_build:
     commands:
       - echo Build completed on `date`
