--- a/appspec.yaml
+++ b/appspec.yaml
@@ -9,7 +9,7 @@ permissions:
     owner: ubuntu
     group: ubuntu
 hooks:
-  AfterInstall:
+  BeforeInstall:
     - location: after_install.sh
       timeout: 300
       runas: ubuntu
